syntax = 'proto3';

package ir.sndu.server;

message ApiMessage {
    oneof message {
        ApiTextMessage text_message = 1;
        ApiDocumentMessage doc_message = 2;
    }
}

message ApiTextMessage {
    string text = 1;
}

message ApiDocumentMessage{
    int64 file_id = 1;
    int64 access_hash = 2;
    int32 file_size = 3;
    string name = 4;
    string mime_type = 5;
}