syntax = "proto3";

package ir.sndu.server;

import "api/peer.proto";
import "api/message.proto";

service MessagingService {
    rpc SendMessage(RequestSendMessage) returns (ResponseVoid) {}
    rpc LoadHistory(RequestLoadHistory) returns (ResponseLoadHistory) {}
    rpc LoadDialogs(RequestLoadDialogs) returns (ResponseLoadDialogs) {}
}

message RequestSendMessage{
    ApiOutPeer out_peer = 1;
    int64 random_id = 2;
    ApiMessage message = 3;
    string token = 4;
}

message ResponseVoid{}

message RequestLoadHistory{
    ApiOutPeer peer = 1;
    int64 date = 2;
    int32 limit = 3;
    string token = 4;
}

message ResponseLoadHistory{
    repeated ApiMessageContainer history = 1;
}

message RequestLoadDialogs {
    int32 limit = 1;
    string token = 2;
}

message ResponseLoadDialogs{
    repeated ApiDialog dialogs = 1;
}